--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -68,7 +68,9 @@
             <tbody class="table-light" *ngIf="subcategories?.length !== 0">
             <tr *ngFor="let subcategory of subcategories; let i = index">
               <td class="align-middle">
-                <img [src]="getSrc(subcategory.img)" alt=" " class="img-fluid img-thumbnail img-50">
+                <div class="frame frame-50 img-thumbnail">
+                  <img [src]="getSrc(subcategory.img)" alt=" " class="img-fluid ">
+                </div>
               </td>
               <td class="align-middle">
                 {{ subcategory.name }}
@@ -133,10 +135,12 @@
         <form #subcategoryForm="ngForm">
           <div class="row">
             <div class="col-12 col-md-5">
-              <div class="file-drop-area ratio ratio-1x1 mb-3">
-                <img [src]="subcategoryImgPreview" class="img-fluid img-thumbnail" alt=" ">
-                <input type="file" name="file" class="file-drop-input" accept="image/*"
-                       (change)="selectedImageChanged($event)">
+              <div class="ratio ratio-1x1 mb-3">
+                <div class="file-drop-area img-thumbnail">
+                  <img [src]="subcategoryImgPreview" class="img-fluid" alt=" ">
+                  <input type="file" name="file" class="file-drop-input" accept="image/*"
+                         (change)="selectedImageChanged($event)">
+                </div>
               </div>
             </div>
             <div class="col-12 col-md-7">
