--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -1,3 +1,21 @@
+@import "variable";
+@import "bootstrap";
+
+@import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.3.0/css/flag-icon.min.css');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700');
+
+@import 'assets/fonts/fontawesome-pro/css/all.min.css';
+
+@import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
+@import '~admin-lte/dist/css/adminlte.min.css';
+@import '~ngx-bootstrap/datepicker/bs-datepicker.css';
+@import '~datatables.net-bs5/css/dataTables.bootstrap5.min.css';
+@import '~datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css';
+@import "~animate.css/animate.min.css";
+
+@import "common";
+
 /* Scrollbar */
 ::-webkit-scrollbar {
   height: 5px;
@@ -13,21 +31,6 @@
   border-radius: 20px;
 }
 
-@import "variable";
-@import "bootstrap";
-
-@import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.3.0/css/flag-icon.min.css');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700');
-
-@import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
-@import '~admin-lte/dist/css/adminlte.min.css';
-@import '~ngx-bootstrap/datepicker/bs-datepicker.css';
-@import '~datatables.net-bs5/css/dataTables.bootstrap5.min.css';
-@import '~datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css';
-@import "~animate.css/animate.min.css";
-
-@import "common";
 
 body {
   width: 100vw;
@@ -50,7 +53,9 @@ tr, td {
 }
 
 .file-drop-area {
-  position: relative;
+  position: absolute;
+  top: 0;
+  bottom: 0;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   cursor: pointer;
   display: flex;
