--- a/deskover-dashboard-website/src/assets/scss/_common.scss
+++ b/deskover-dashboard-website/src/assets/scss/_common.scss
@@ -21,6 +21,18 @@
   }
 }
 
+.frame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &.frame-50 {
+    min-width: 50px;
+    min-height: 50px;
+    width: 50px;
+  }
+}
+
 .img-50 {
   min-width: 50px;
   min-height: 50px;
