--- a/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
@@ -241,7 +241,7 @@
                 <div class="col-12 col-md-6">
                   <label class="form-label">Ảnh mô tả</label>
                   <div class="row row-cols-2 g-3">
-                    <div class="col" *ngFor="let productThumbnail of product.productThumbnails; index as i">
+                    <div class="col" *ngFor="let productThumbnail of product.productThumbnails | sortById; index as i">
                       <div class="ratio ratio-1x1">
                         <div class="file-drop-area img-thumbnail">
                           <img class="img-fluid" alt=" " [src]="productPreviewThumbnails[i]">
