--- a/deskover-dashboard-website/src/app/components/layouts/menu-sidebar/menu-sidebar.component.scss
+++ b/deskover-dashboard-website/src/app/components/layouts/menu-sidebar/menu-sidebar.component.scss
@@ -1,7 +1,12 @@
 :host {
-    display: block;
+  display: block;
 }
 
-.sidebar>nav {
+.sidebar > nav {
   overflow-y: initial !important;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
 }
