Update Flash Sale Service

--- a/deskover-dashboard-website/src/assets/scss/_common.scss
+++ b/deskover-dashboard-website/src/assets/scss/_common.scss
@@ -79,6 +79,10 @@
   background-color: rgba(255, 152, 0, .09) !important;
 }
 
+.bg-faded-primary {
+  background-color: rgba(0, 150, 136, .09) !important;
+}
+
 @media (max-width: 575.98px) {
   .w-sm-100 {
     width: 100%;
