--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -92,34 +92,28 @@ tr, td {
   }
 }
 
-.nav-sidebar {
-  position: unset;
+[class*=sidebar-light-] .nav-sidebar>.nav-item>.nav-link.active {
+  box-shadow: none;
 }
 
-.brand-link.border-bottom-0~.sidebar {
-  height: calc(100% - 8.1rem) !important;
+.nav-sidebar {
+  position: unset;
+
+  .nav-link {
+    display: flex;
+    align-items: center;
+
+    .p {
+      white-space: nowrap;
+    }
+  }
+
 }
 
 .sidebar-dark-primary .nav-sidebar>.nav-item>.nav-link.active,
 .sidebar-light-primary .nav-sidebar>.nav-item>.nav-link.active {
   background-color: $primary !important;
   color: #fff;
-}
-
-.page-item.active .page-link {
-  background-color: $primary !important;
-  border-color: $primary !important;
-}
-
-.login-page {
-  background-image: url('assets/images/login-bg.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.nav-sidebar .nav-link p {
-  white-space: nowrap;
 }
 
 // Sidebar menu animation
@@ -132,6 +126,22 @@ tr, td {
 // Override original AdminLTE transform
 .nav-sidebar .menu-is-opening>.nav-link i.right, .nav-sidebar .menu-is-opening>.nav-link svg.right, .nav-sidebar .menu-open>.nav-link i.right, .nav-sidebar .menu-open>.nav-link svg.right {
   transform: none;
+}
+
+.brand-link.border-bottom-0~.sidebar {
+  height: calc(100% - 8.1rem) !important;
+}
+
+.page-item.active .page-link {
+  background-color: $primary !important;
+  border-color: $primary !important;
+}
+
+.login-page {
+  background-image: url('assets/images/login-bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .user-menu > .nav-link {
