sửa lỗi font chữ

--- a/deskover-ecommerce-website/src/main/resources/templates/login.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/login.html
@@ -58,7 +58,7 @@
                                 <div class="form-group d-flex flex-wrap justify-content-between mb-0 mt-2">
                                     <div class="custom-control custom-checkbox mb-2">
                                         <input class="woocommerce-form__input woocommerce-form__input-checkbox custom-control-input" name="rememberme" type="checkbox" id="remember_me" value="forever">
-                                        <label class="woocommerce-form__label woocommerce-form__label-for-checkbox woocommerce-form-login__rememberme custom-control-label" for="rememberme">Ghi nhớ tôi</label>
+                                        <label class="woocommerce-form__label woocommerce-form__label-for-checkbox woocommerce-form-login__rememberme custom-control-label" for="rememberme">Ghi nhớ tài khoản</label>
                                     </div>
                                     <div class="woocommerce-LostPassword lost_password">
                                         <a class="font-size-sm" href="https://demo2.madrasthemes.com/cartzilla/my-account/lost-password/">Quên mật khẩu?</a>
