--- a/deskover-ecommerce-website/src/main/resources/templates/components/header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/header.html
@@ -17,4 +17,11 @@
     <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/nouislider/dist/nouislider.min.css}" / >
     <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
+	
+    <!-- Bootstrap core CSS for VNpay -->
+    <link href="https://pay.vnpay.vn/lib/vnpay/vnpay.css" rel="stylesheet" />
+    <script src="https://pay.vnpay.vn/lib/vnpay/vnpay.min.js"></script>
+    <script src="/assets/jquery-1.11.3.min.js"></script>
+
+	
 </head>
