--- a/deskover-dashboard-website/src/app/components/layouts/header/user-info/user-info.component.html
+++ b/deskover-dashboard-website/src/app/components/layouts/header/user-info/user-info.component.html
@@ -8,9 +8,9 @@
     <div class="d-flex">
       <div class="image me-2">
         <img
-          [src]="'assets/images/avatar/default-profile.png'"
+          [src]="user.avatar ? user.avatar : 'assets/images/avatar/default-profile.png'"
           class="user-image img-circle elevation-2"
-          alt="User Image"
+          alt=" "
         />
       </div>
       <div class="info">
@@ -21,9 +21,9 @@
   <ng-container dropdown-menu>
     <li class="user-header bg-primary">
       <img
-        [src]="'assets/images/avatar/default-profile.png'"
+        [src]="user.avatar ? user.avatar : 'assets/images/avatar/default-profile.png'"
         class="img-circle elevation-2"
-        alt="User Image"
+        alt=" "
       />
 
       <p>
